--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -32,7 +32,7 @@ body, html {
     color: white;
     max-width: 42%;
     z-index: 12;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
+    transition: opacity 1.2s ease, visibility 0.8s ease;
 }
 
 .splash-content h1 {
@@ -80,6 +80,7 @@ body, html {
     justify-content: space-around;
     padding: 1rem 0;
     z-index: 10; /* Ensure it stays on top */
+    border-right: 3px solid rgba(255, 204, 0, 0.7);
 }
 
 
@@ -116,7 +117,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.75); /* White background with slight transparency */
+    background-color: rgba(255, 255, 255, 0.8); /* White background with slight transparency */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -127,9 +128,13 @@ body, html {
     font-family: Arial, sans-serif;
     padding: 2rem;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+    transition: opacity 1.2s ease, visibility 0.8s ease; /* Smooth appearance */
 }
 
+
+
 .about-container {
+    width: 60%;
     max-width: 800px;
     margin: auto;
 }
@@ -148,8 +153,8 @@ body, html {
     margin-bottom: 1rem;
 }
 
-.hidden {
-    display: none;
+.about.hidden {
+    opacity: 0;
 }
 
 
