--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -30,7 +30,7 @@ body, html {
     top: 2vw; /* Positioning from the top of the image */
     left: 3.5rem; /* Positioning from the left of the image */
     color: white;
-    max-width: 42%;
+    max-width: 55%;
     z-index: 12;
     transition: opacity 1.2s ease, visibility 0.8s ease;
 }
@@ -134,9 +134,34 @@ body, html {
 
 
 .about-container {
-    width: 60%;
+    position: relative;
+    width: 80%;
     max-width: 800px;
     margin: auto;
+    padding: 8rem;
+}
+
+/* Orange Border (top left corner, 50% across and down) */
+.about-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60%;
+    height: 55%;
+    border-top: 8px solid #ffcc00; /* Orange border color */
+    border-left: 18px solid #ffcc00; /* Orange border color */
+}
+
+.about-container::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 60%;
+    height: 55%;
+    border-right: 18px solid #ffcc00;
+    border-bottom: 8px solid #ffcc00;
 }
 
 .about h2 {
@@ -174,7 +199,7 @@ body, html {
         background-color: rgba(0, 0, 0, 0.9); /* Slightly darker for contrast */
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.8); /* Shadow under the top navbar */
         border-right: none;
-        border-bottom:  3px solid  #ffcc00;
+        border-bottom:  2px solid  rgba(255, 204, 0, 0.7);;
     }
 
     .vertical-navbar .nav-links {
@@ -208,6 +233,10 @@ body, html {
         top: 4.8rem; /* Adjust for horizontal navbar height */
         width: 100%; /* Full width */
         height: calc(100% - 4rem); /* Avoid overlap with horizontal navbar */
+    }
+
+    .about-container {
+        padding: 5rem;
     }
 
     .about h2 {
