--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -44,6 +44,7 @@ body, html {
 
 .navbar .nav-links a {
     font-family: 'Orbitron', sans-serif;
+    font-weight: 800;
     text-decoration: none;
     color: white;
     font-size: 1.4vw;
@@ -71,22 +72,24 @@ body, html {
 
 .splash-content {
     position: absolute;
-    top: 4rem; /* Positioning from the top of the image */
+    top: 4.2rem; /* Positioning from the top of the image */
     left: 2rem; /* Positioning from the left of the image */
     color: white;
-    max-width: 65%;
+    max-width: 80%;
     z-index: 12;
     transition: opacity 1.2s ease, visibility 1.2s ease;
-    line-height: 3rem;
+    line-height: 2.8vw;
 }
 
 .splash-content h1 {
-    font-size: 3rem;
+    font-size: 3.3vw;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
+    font-weight: 800;
 }
 
 .splash-content h2 {
-    margin: 1rem;
+    font-size: 2.2vw;
+    margin: 1.2rem 1rem;
     text-align: center;
     
 }
@@ -94,7 +97,7 @@ body, html {
 .splash-content .highlight {
     font-family: 'Orbitron', sans-serif; /* Futuristic font */
     color: #ffcc00; /* Accent color */
-    font-weight: 700;
+    font-weight: 600;
     text-transform: uppercase;
     text-shadow: 
         7px 7px 4px rgba(0, 0, 0, 0.9), /* Bold shadow */
@@ -356,6 +359,10 @@ body, html {
 .splash {
     background: url(../Images/Progress\ -\ Human\ and\ machine\ towards\ civilization.webp) no-repeat center center/cover;
     height: 100vh;
+}
+
+.navbar .nav-links {
+
 }
 
 }
