--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -62,6 +62,12 @@ body, html {
     transform: scale(1.1); /* Enlarge slightly */
 }
 
+.hidden {
+    opacity: 0;
+    visibility: hidden;
+    
+}
+
 /* Splash Section */
 .splash {
     background: url('../Images/Together - humans and machines with a bright future.webp') no-repeat center center/cover;
@@ -82,8 +88,8 @@ body, html {
     color: white;
     max-width: 80%;
     z-index: 20;
-    transition: opacity 1.2s ease, visibility 1.2s ease;
     line-height: 2.8vw;
+    transition: opacity 2s ease, visibility 2s ease;
 }
 
 .splash-content h1 {
@@ -136,7 +142,7 @@ body, html {
     font-family: Arial, sans-serif;
     padding: 2rem;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow */
-    transition: opacity 1.2s ease, visibility 2s ease; /* Smooth appearance */
+    transition: opacity 2s ease, visibility 2s ease; /* Smooth appearance */
 }
 
 
@@ -186,9 +192,6 @@ body, html {
     margin-bottom: 1rem;
 }
 
-.about.hidden {
-    opacity: 0;
-}
 
 /* Contact Section */
 .contact {
@@ -208,7 +211,7 @@ body, html {
     font-family: Arial, sans-serif;
     padding: 2rem;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow */
-    transition: opacity 1.2s ease, visibility 2s ease; /* Smooth appearance */
+    transition: opacity 2s ease, visibility 2s ease; /* Smooth appearance */
 }
 
 .contact-container {
@@ -256,9 +259,6 @@ body, html {
     margin-bottom: 1rem;
 }
 
-.contact.hidden {
-    opacity: 0;
-}
 
 
 
