--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -85,6 +85,7 @@ body, html {
     position: absolute;
     top: 4.2rem; /* Positioning from the top of the image */
     left: 2rem; /* Positioning from the left of the image */
+    font-family: "VT323", monospace;
     color: white;
     max-width: 80%;
     z-index: 20;
