minor fix - added .projects mobile @media

--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -537,6 +537,11 @@ body, html {
     height: 100vh;
 }
 
+.projects {
+    top: 0;
+    height: 100vh;
+}
+
 .contact {
     top: 0;
     height: 100vh;
