--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -208,10 +208,11 @@ body, html {
 
 .projects-container {
     position: relative;
-    width: 80%;
-    max-width: 800px;
-    margin: auto;
-    padding: 8rem;
+    width: 100%;
+    height: 100%;
+    margin-top: 3rem;
+    padding: 1.5rem;
+    display: grid;
 }
 
 /* Orange Border (top left corner, 50% across and down) */
