--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -213,6 +213,15 @@ body, html {
     margin-top: 3rem;
     padding: 1.5rem;
     display: grid;
+    grid-template-rows: repeat(5, 20%);
+    grid-template-columns: repeat(5, 20%);
+    grid-template-areas: 
+    " item1 item1 item2 item2 item2"
+    " item1 item1 item3 item3 item5"
+    " item1 item1 item3 item3 item5"
+    " item4 item4 item3 item3 item5"
+    " item4 item4 item3 item3 item5"
+    ;
 }
 
 /* Orange Border (top left corner, 50% across and down) */
@@ -225,6 +234,7 @@ body, html {
     height: 55%;
     border-top: 8px solid black; /* White border for contrast */
     border-left: 18px solid black;
+    z-index: -100;
 }
 
 .projects-container::after {
@@ -236,12 +246,13 @@ body, html {
     height: 55%;
     border-right: 18px solid black;
     border-bottom: 8px solid black;
+    z-index: -100;
 }
 
 .projects h2 {
     font-family: 'Orbitron', sans-serif;
     color: black;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
     text-transform: uppercase;
 }
@@ -255,6 +266,76 @@ body, html {
 .projects.hidden {
     opacity: 0;
     visibility: hidden;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    margin: .2rem;
+    border: 1px solid black;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 1);
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+   
+}
+
+.item:hover {
+    transform: scale(1.1);
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.8);
+    
+}
+
+.item-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 1s ease, transform 1s ease; 
+}
+
+.item-info h2 {
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 900;
+    font-size: 2rem;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #ffcc00;
+    
+}
+
+.item:hover .item-info {
+    opacity: 1;
+    transform: translateY(0);
+    backdrop-filter: blur(.40rem);
+}
+
+.item1 {
+    grid-area: item1;
+    background: url(../Images/flexboxWebpageSplash.png) top center/cover;
+}
+
+.item2 {
+    grid-area: item2;
+    background: url(../Images/petr-sidorov-XoBdj1zV-EA-unsplash.jpg) top center/cover;
+}
+
+.item3 {
+    grid-area: item3;
+    background: url(../Images/fotomaticResponsiveLayout.png) top center/cover; 
+}
+
+.item4 {
+    grid-area: item4;
+    background: url(../Images/sunCitySolarProtoypePage.png) top center/cover;
+}
+
+.item5 {
+    grid-area: item5;
+    background: url(../Images/carl-raw-dmc4sVdnSDs-unsplash-portraitEdit.jpg) top center/cover;
 }
 
 
