--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -252,8 +252,6 @@ body, html {
 .projects h2 {
     font-family: 'Orbitron', sans-serif;
     color: black;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
     text-transform: uppercase;
 }
 
@@ -290,7 +288,7 @@ body, html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     width: 100%;
     height: 100%;
     opacity: 0;
@@ -301,7 +299,7 @@ body, html {
 .item-info h2 {
     font-family: 'Orbitron', sans-serif;
     font-weight: 900;
-    font-size: 2rem;
+    font-size: 1.8rem;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #ffcc00;
     
@@ -321,6 +319,10 @@ body, html {
 .item2 {
     grid-area: item2;
     background: url(../Images/petr-sidorov-XoBdj1zV-EA-unsplash.jpg) top center/cover;
+}
+
+.item2 .item-info {
+    flex-direction: row;
 }
 
 .item3 {
@@ -500,10 +502,18 @@ body, html {
     .projects-container {
         padding: 2rem;
         width: 95%;
+        grid-template-rows: repeat(3, 33.3%);
+        grid-template-columns: repeat(2, 50%);
+        grid-template-areas: 
+        " item1 item1 "
+        " item2 item3 "
+        " item4 item5 "
+        
+        ;
     }
 
     .projects h2 {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
     }
 
     .projects p {
