--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -160,10 +160,9 @@ body, html {
 
 .about-container {
     position: relative;
-    width: 80%;
-    max-width: 800px;
+    width: 95%;
     margin: auto;
-    padding: 8rem;
+    padding: 2rem;
 }
 
 /* Orange Border (top left corner, 50% across and down) */
@@ -176,6 +175,7 @@ body, html {
     height: 55%;
     border-top: 8px solid #ffcc00; /* Orange border color */
     border-left: 18px solid #ffcc00; /* Orange border color */
+    z-index: -100;
 }
 
 .about-container::after {
@@ -187,20 +187,21 @@ body, html {
     height: 55%;
     border-right: 18px solid #ffcc00;
     border-bottom: 8px solid #ffcc00;
+    z-index: -100;
 }
 
 .about h2 {
     font-family: 'Orbitron', sans-serif;
     color: #ffcc00;
-    font-size: 2rem;
+    font-size: 2.5vw;
     margin-bottom: 1rem;
     text-transform: uppercase;
 }
 
 .about p {
-    font-size: 1rem;
-    line-height: 1.6;
+    font-size: clamp(1rem, 1vw, 1.5vw);
     margin-bottom: 1rem;
+    line-height: 2em;
 }
 
 /* Projects Section */
@@ -409,7 +410,6 @@ body, html {
 .contact-container {
     position: relative;
     width: 80%;
-    max-width: 800px;
     margin: auto;
     padding: 8rem;
 }
@@ -424,6 +424,7 @@ body, html {
     height: 55%;
     border-top: 8px solid white; /* Orange border color */
     border-left: 18px solid white; /* Orange border color */
+    z-index: -100;
 }
 
 .contact-container::after {
@@ -435,22 +436,26 @@ body, html {
     height: 55%;
     border-right: 18px solid white;
     border-bottom: 8px solid white;
+    z-index: -100;
 }
 
 .contact h2 {
     font-family: 'Orbitron', sans-serif;
     color: white;
-    font-size: 2rem;
+    font-size: 2.5vw;
     margin-bottom: 1rem;
     text-transform: uppercase;
 }
 
 .contact p {
-    font-size: 1rem;
+    font-size: 1.5vw;
     line-height: 1.6;
-    margin-bottom: 1rem;
+    margin: 2rem;
 }
 
+.contact a {
+    color: white;
+}
 
 
 
@@ -475,10 +480,11 @@ body, html {
 
     .navbar .nav-links {
         flex-direction: row; /* Horizontal links */
-        gap: 1.5rem;
+        gap: 0;
         justify-content: space-around;
         width: 100%;
         background-color: transparent;
+        padding: 0;
     }
 
     .navbar .nav-links li {
@@ -507,12 +513,15 @@ body, html {
     .splash-content h1 {
         font-size: 7vw;
         padding-top: 2rem;
+        -webkit-text-stroke-width: 0px;
     }
+
 
     .splash-content h2 {
         padding: 2rem;
         font-size: 4vw;
         line-height: 3.2rem;
+        -webkit-text-stroke-width: 0px;
     }
 
     .about {
@@ -524,7 +533,7 @@ body, html {
 
     .about-container {
         padding: 2rem;
-        width: 95%;
+        width: 100%;
     }
 
     .about h2 {
@@ -532,7 +541,8 @@ body, html {
     }
 
     .about p {
-        font-size: 1.5rem;
+        font-size: clamp(0.84rem, 2.2vw, 2rem);
+        line-height: 1.6em;
     }
 
     .projects {
@@ -555,14 +565,16 @@ body, html {
         
         ;
     }
-
+    
+    .item-info h2 {
+        font-size: 2.2vw;
+    }
+    
     .item-info .button {
         font-size: 1.6vw;
     }
 
-    .projects h2 {
-        font-size: 2.2vw;
-    }
+   
 
 
     .item2 .item-info {
@@ -577,19 +589,20 @@ body, html {
         top: 5rem; /* Adjust for horizontal navbar height */
         width: 100%; /* Full width */
         height: calc(100% - 5rem); /* Avoid overlap with horizontal navbar */
+        padding: 1rem;
     }
 
     .contact-container {
-        padding: 2rem;
+        padding: 2rem 1rem;
         width: 95%;
     }
 
     .contact h2 {
-        font-size: 2.5rem;
+        font-size: clamp(2rem, 6vw, 5rem)
     }
 
     .contact p {
-        font-size: 1.5rem;
+        font-size: clamp(.85rem, 2.5vw, 2rem)
     }
 }
 
@@ -599,6 +612,14 @@ body, html {
 .splash {
     background: url(../Images/Progress\ -\ Human\ and\ machine\ towards\ civilization.webp) no-repeat center center/cover;
     height: 100vh;
+}
+
+.splash-content {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.splash-content h1, .splash-content h2 {
+    -webkit-text-stroke-width: 0px;
 }
 
 .navbar {
@@ -679,11 +700,45 @@ body, html {
 .about {
     top: 0;
     height: 100vh;
+    padding: 1em;
+}
+
+.about-container {
+    padding: 1.5em;
 }
 
 .projects {
     top: 0;
     height: 100vh;
+}
+
+.projects-container {
+    padding: 1.8rem;
+    width: 100%;
+    grid-template-rows: repeat(5, 20%);
+    grid-template-columns: repeat(1, 100%);
+    grid-template-areas: 
+    " item1 "
+    " item2 "
+    " item3 "
+    " item4 "
+    " item5 "
+    
+    ;
+}
+
+.item:hover {
+    transform: scale(1.3);
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.8);
+    
+}
+
+.item-info h2 {
+    font-size: 5vw;
+}
+
+.item-info .button {
+    font-size: 2.5vw;
 }
 
 .contact {
