--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -39,7 +39,7 @@ body, html {
     flex-direction: row;
     gap: 6rem; /* Space between links */
     background-color: rgba(0, 0, 0, 0.9);
-    
+    overflow: hidden;
     padding: 1.5rem 3.5rem;
 }
 
@@ -57,7 +57,7 @@ body, html {
     cursor: pointer;
     padding: .01em .5em;
     letter-spacing: 0.3em;
-    transition: color 0.6s, transform 0.3s;
+    transition: color 0.1s, transform 0.6s, opacity 1s;
 }
 
 .navbar .nav-links a::before {
@@ -69,15 +69,20 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    
+    opacity: .25;
     transform: perspective(1em) rotateX(40deg) scale(1, .25);
     filter: blur(.65em);
+    transition: color 0.1s, transform 0.6s, opacity 1s;
+}
+
+.nav-links a:hover, .nav-links a:focus {
+    color: #ffcc00; /* Accent color */
     
 }
 
-.navbar .nav-links a:hover, .navbar .nav-links a:focus {
-    color: #ffcc00; /* Accent color */
-    
+.nav-links a:hover::before, .nav-links a:focus::before {
+    opacity: 1;
+    transform: perspective(1em) rotateX(40deg) scale(1, .35);
 }
 
 .hidden {
