--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -70,19 +70,28 @@ body, html {
     width: 100%;
     height: 100%;
     opacity: .25;
-    transform: perspective(1em) rotateX(40deg) scale(1, .25);
+    transform: perspective(1em) rotateX(40deg) scale(1, .20);
     filter: blur(.65em);
     transition: color 0.1s, transform 0.6s, opacity 1s;
 }
 
 .nav-links a:hover, .nav-links a:focus {
-    color: #ffcc00; /* Accent color */
-    
+    color: #ffcc00;
 }
 
 .nav-links a:hover::before, .nav-links a:focus::before {
+    opacity: 0.7;
+    transform: perspective(1em) rotateX(40deg) scale(1, .25);
+}
+
+/* Active styles */
+.nav-links a.active {
+    color: #ffcc00;
+}
+
+.nav-links a.active::before {
     opacity: 1;
-    transform: perspective(1em) rotateX(40deg) scale(1, .35);
+    transform: perspective(1em) rotateX(40deg) scale(1, 0.40);
 }
 
 .hidden {
