--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -41,6 +41,11 @@ body, html {
     background-color: rgba(0, 0, 0, 0.9);
     overflow: hidden;
     padding: 1.5rem 3.5rem;
+    border-left: 9px solid rgba(255, 204, 0, 0.8);
+    border-bottom: 4px solid rgba(255, 204, 0, 0.8);
+    background-clip: padding-box;
+    border-bottom-left-radius: 2rem;
+    box-shadow: -2px 2px 8px black;
 }
 
 .navbar .nav-links li {
@@ -115,17 +120,17 @@ body, html {
 
 .splash-content {
     position: absolute;
-    top: 5rem; /* Positioning from the top of the image */
+    top: 5.8rem; /* Positioning from the top of the image */
     left: 2rem; /* Positioning from the left of the image */
     font-family: 'Orbitron', sans-serif;
     max-width: 60%;
     z-index: 20;
-    line-height: 2.8vw;
+    line-height: clamp(2.5rem, 2.8vw, 10rem);
     transition: opacity 2s ease, visibility 2s ease;
 }
 
 .splash-content h1 {
-    font-size: 3.3vw;
+    font-size: clamp(2.6rem, 3.3vw, 10rem);
     color: #ffcc00;
     font-weight: 800;
     letter-spacing: 1px;
@@ -134,11 +139,11 @@ body, html {
 }
 
 .splash-content h2 {
-    font-size: 2.2vw;
+    font-size: clamp(1.8rem, 1.9vw, 10rem);
     color: white;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
-    margin: 1.5vw;
+    margin: 1rem 1.5rem;
     opacity: 0;
     transition: opacity 1s ease;
 }
@@ -190,6 +195,7 @@ body, html {
     border-top: 8px solid #ffcc00; /* Orange border color */
     border-left: 18px solid #ffcc00; /* Orange border color */
     z-index: -100;
+    border-top-left-radius: 2rem;
 }
 
 .about-container::after {
@@ -202,6 +208,7 @@ body, html {
     border-right: 18px solid #ffcc00;
     border-bottom: 8px solid #ffcc00;
     z-index: -100;
+    border-bottom-right-radius: 2rem;
 }
 
 .about h2 {
@@ -243,7 +250,7 @@ body, html {
     position: relative;
     width: 100%;
     height: 100%;
-    margin-top: 3rem;
+    margin-top: 3.55rem;
     padding: 1.5rem;
     display: grid;
     grid-template-rows: repeat(5, 20%);
@@ -268,6 +275,7 @@ body, html {
     border-top: 8px solid black; /* White border for contrast */
     border-left: 18px solid black;
     z-index: -100;
+    border-top-left-radius: 2rem;
 }
 
 .projects-container::after {
@@ -280,6 +288,7 @@ body, html {
     border-right: 18px solid black;
     border-bottom: 8px solid black;
     z-index: -100;
+    border-bottom-right-radius: 2rem;
 }
 
 .projects h2 {
@@ -380,8 +389,8 @@ body, html {
     display: inline-block;
     padding: .4em .8em;
     border-radius: 8px;
-    border: 1px solid #f39c00; /* Example: blue background */
-    color: #f39c00;
+    border: 1px solid #ffcc00; /* Example: blue background */
+    color: #ffcc00;
     background: black;
     text-decoration: none; /* Remove underline from links */
     font-size: 1vw;
@@ -444,6 +453,7 @@ body, html {
     border-top: 8px solid white; /* Orange border color */
     border-left: 18px solid white; /* Orange border color */
     z-index: -100;
+    border-top-left-radius: 2rem;
 }
 
 .contact-container::after {
@@ -456,6 +466,7 @@ body, html {
     border-right: 18px solid white;
     border-bottom: 8px solid white;
     z-index: -100;
+    border-bottom-right-radius: 2rem;
 }
 
 .contact h2 {
@@ -513,6 +524,7 @@ body, html {
         width: 100%;
         background-color: transparent;
         padding: 0;
+        border: none;
     }
 
     .navbar .nav-links li {
@@ -712,6 +724,7 @@ body, html {
     background: rgba(0, 0, 0, .70);
     backdrop-filter: blur(.65rem);
     border-left:  3px solid  rgba(255, 204, 0, 0.9);
+    border-radius: .8rem;
     transform: translateX(100%);
     transition: transform 400ms ease-out;
     
