--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -181,7 +181,7 @@ body, html {
     position: relative;
     width: 95%;
     margin: auto;
-    padding: 2rem;
+    padding: 2em;
 }
 
 /* Orange Border (top left corner, 50% across and down) */
@@ -214,15 +214,15 @@ body, html {
 .about h2 {
     font-family: 'Orbitron', sans-serif;
     color: #ffcc00;
-    font-size: 2.5vw;
-    margin-bottom: 1rem;
+    font-size: clamp(2rem, 3vw, 5.5rem);
+    margin: .5em 0em;
     text-transform: uppercase;
 }
 
 .about p {
-    font-size: clamp(1rem, 1vw, 1.5vw);
-    margin-bottom: 1rem;
-    line-height: 2em;
+    font-size: clamp(.9rem, 1.2vw, 1.5rem);
+    line-height: clamp(.8rem, 2.5vw, 6rem);
+    margin: 0rem .8em;
 }
 
 /* Projects Section */
@@ -544,15 +544,16 @@ body, html {
         left: 0;
         min-width: 90%;
         max-width: 90%;
-        height: 60%;
+        height: 28rem;
         text-align: center;
         line-height: normal;
         background-color: rgba(0, 0, 0, 0.5);
+        z-index: 0;
     }
 
     .splash-content h1 {
         font-size: 7vw;
-        padding-top: 2rem;
+        padding-top: 4rem;
         -webkit-text-stroke-width: 0px;
     }
 
