--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -313,7 +313,7 @@ body, html {
     flex-direction: column;
     align-items: center;
     justify-content: center; 
-    margin: .2rem;
+    margin: .25em;
     border: 1px solid black;
     box-shadow: 4px 4px 5px rgba(0, 0, 0, 1);
     transition: transform 0.5s ease, box-shadow 0.5s ease;
@@ -321,9 +321,8 @@ body, html {
 }
 
 .item:hover {
-    transform: scale(1.1);
-    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.8);
-    
+    transform: scale(1.1); 
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.8); 
 }
 
 .item-info {
@@ -605,6 +604,10 @@ body, html {
         " item4 item5 "
         
         ;
+    }
+    
+    .item {
+        margin: .2em;
     }
     
     .item-info h2 {
